Added settings icon and location view on main screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,8 @@
 
     <color name="app_red">#e74c3c</color>
     <color name="app_green">#65B653</color>
+    <color name="app_blue">#03A9F4</color>
     <color name="app_dark_gray">#A5A5A5</color>
-    <color name="color_link">#03A9F4</color>
     <color name="black_opacity_05">#0D000000</color>
     <color name="black_opacity_20">#33000000</color>
     <color name="black_opacity_40">#66000000</color>
