--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,15 +14,45 @@
         style="@style/ScreenContainer">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/locationContainer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/settingsButton"
+            app:layout_constraintBottom_toBottomOf="@id/settingsButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/settingsButton"
+            android:layout_marginEnd="16dp"
+            android:onClick="@{() -> viewModel.onLocationClick()}">
+            <ImageView
+                android:id="@+id/locationIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_location_blue"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/locationView"
+                style="@style/Text.Location"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/locationIcon"
+                app:layout_constraintStart_toEndOf="@id/locationIcon"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="Санкт-Петербург" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/dateContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/settingsButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/calendarView"
-            app:layout_constraintHorizontal_chainStyle="spread"
+            android:layout_marginTop="8dp"
             android:padding="8dp"
-            android:background="@drawable/background_view_substrate">
+            android:background="@drawable/background_view_substrate"
+            android:onClick="@{() -> viewModel.onDateClick()}">
             <TextClock
                 android:id="@+id/dayOfMonthView"
                 android:layout_width="wrap_content"
@@ -53,15 +83,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
-            android:id="@+id/calendarView"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="@id/dateContainer"
-            app:layout_constraintBottom_toBottomOf="@id/dateContainer"
-            app:layout_constraintStart_toEndOf="@id/dateContainer"
+            android:id="@+id/settingsButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/icon_calendar_logo"
-            android:onClick="@{() -> viewModel.onCalendarClick()}" />
+            android:src="@drawable/icon_settings_gray"
+            android:clickable="true"
+            android:onClick="@{() -> viewModel.onSettingsClick()}"/>
 
         <TextView
             android:id="@+id/shoppingListsView"
