--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,6 +10,12 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="Text.Location">
+        <item name="android:ellipsize">marquee</item>
+        <item name="singleLine">true</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="ScreenContainer">
         <item name="android:padding">16dp</item>
     </style>
