--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -51,8 +51,18 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:padding="8dp"
-            android:background="@drawable/background_view_substrate"
+            android:background="@drawable/icon_calendar_logo"
             android:onClick="@{() -> viewModel.onDateClick()}">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/white_opacity_45" />
+
             <TextClock
                 android:id="@+id/dayOfMonthView"
                 android:layout_width="wrap_content"
@@ -60,12 +70,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:padding="2dp"
+                android:paddingTop="20dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:includeFontPadding="false"
                 android:format12Hour="dd"
                 android:format24Hour="dd"
                 android:textSize="48sp"
-                android:includeFontPadding="false"
-                android:background="@drawable/background_view_substrate"
                 tools:text="20" />
 
             <TextClock
@@ -75,10 +86,11 @@
                 app:layout_constraintTop_toBottomOf="@id/dayOfMonthView"
                 app:layout_constraintStart_toStartOf="@id/dayOfMonthView"
                 app:layout_constraintEnd_toEndOf="@id/dayOfMonthView"
+                android:paddingBottom="8dp"
+                android:includeFontPadding="false"
                 android:format12Hour="MMMM"
                 android:format24Hour="MMMM"
                 android:textSize="20sp"
-                android:includeFontPadding="false"
                 tools:text="July" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -98,7 +110,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/dateContainer"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:padding="16dp"
             android:textSize="20sp"
             android:background="@drawable/background_sticker"
