--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="black_opacity_20">#33000000</color>
     <color name="black_opacity_40">#66000000</color>
     <color name="black_opacity_50">#80000000</color>
+    <color name="white_opacity_45">#73FFFFFF</color>
 </resources>
