--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -19,4 +19,10 @@
     <style name="ScreenContainer">
         <item name="android:padding">16dp</item>
     </style>
+
+    <style name="CommonProgressBar">
+        <item name="android:layout_width">42dp</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:indeterminate">true</item>
+    </style>
 </resources>
