--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,6 +52,35 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:onClick="@{() -> viewModel.onDateClick()}" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/weatherView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/settingsButton"
+            app:layout_constraintStart_toEndOf="@id/calendar"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/temperatureView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text='@{String.format("%s°C", viewModel.currentWeather.temperature)}'
+                tools:text="+20.24°C" />
+
+            <TextView
+                android:id="@+id/weatherDescriptionView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/temperatureView"
+                app:layout_constraintStart_toStartOf="@id/temperatureView"
+                app:layout_constraintEnd_toEndOf="@id/temperatureView"
+                android:text="@{viewModel.currentWeather.description}"
+                tools:text="сильный дождь" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
             android:id="@+id/settingsButton"
