--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="app_green">#65B653</color>
     <color name="app_blue">#03A9F4</color>
     <color name="app_dark_gray">#A5A5A5</color>
+    <color name="app_light_gray">@color/black_opacity_05</color>
     <color name="black_opacity_05">#0D000000</color>
     <color name="black_opacity_20">#33000000</color>
     <color name="black_opacity_40">#66000000</color>
