--- a/app/src/main/res/layout/common_current_weather_view.xml
+++ b/app/src/main/res/layout/common_current_weather_view.xml
@@ -66,8 +66,8 @@
         android:layout_marginTop="4dp">
         <ImageView
             android:id="@+id/windIcon"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +81,7 @@
             app:layout_constraintTop_toTopOf="@id/windIcon"
             app:layout_constraintBottom_toBottomOf="@id/windIcon"
             app:layout_constraintStart_toEndOf="@id/windIcon"
+            android:layout_marginStart="1dp"
             android:textSize="12sp"
             tools:text="3.5м/с" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -95,8 +96,8 @@
         app:layout_constraintEnd_toEndOf="parent">
         <ImageView
             android:id="@+id/humidityIcon"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +111,7 @@
             app:layout_constraintTop_toTopOf="@id/humidityIcon"
             app:layout_constraintBottom_toBottomOf="@id/humidityIcon"
             app:layout_constraintStart_toEndOf="@id/humidityIcon"
+            android:layout_marginStart="1dp"
             android:textSize="12sp"
             tools:text="58%" />
     </androidx.constraintlayout.widget.ConstraintLayout>
