--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -60,36 +60,12 @@
             app:layout_constraintTop_toTopOf="@id/calendarView"
             app:layout_constraintBottom_toBottomOf="@id/calendarView"
             app:layout_constraintStart_toEndOf="@id/calendarView"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/settingsButton"-->
-<!--            app:layout_constraintStart_toEndOf="@id/calendarView"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            android:layout_marginTop="8dp">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/temperatureView"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                android:text='@{String.format("%s°C", viewModel.currentWeather.temperature)}'-->
-<!--                tools:text="+20.24°C" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/weatherDescriptionView"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/temperatureView"-->
-<!--                app:layout_constraintStart_toStartOf="@id/temperatureView"-->
-<!--                app:layout_constraintEnd_toEndOf="@id/temperatureView"-->
-<!--                android:text="@{viewModel.currentWeather.description}"-->
-<!--                tools:text="сильный дождь" />-->
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+            app:layout_constraintEnd_toEndOf="parent"
+            app:temperature='@{String.format("%d°C", viewModel.currentWeather.temperature)}'
+            app:description="@{viewModel.currentWeather.description}"
+            app:temperatureFeelsLike='@{String.format("%s %d°C", @string/feels_like, viewModel.currentWeather.temperatureFeelsLike)}'
+            app:windSpeed='@{String.format("%.1f%s", viewModel.currentWeather.windSpeed, @string/meters_per_second)}'
+            app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}' />
 
         <ImageView
             android:id="@+id/settingsButton"
