--- a/app/src/main/res/layout/common_current_weather_view.xml
+++ b/app/src/main/res/layout/common_current_weather_view.xml
@@ -13,7 +13,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/weatherIcon"
+        app:layout_constraintBottom_toBottomOf="@id/weatherIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/weatherIcon"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -24,10 +25,9 @@
 
     <ImageView
         android:id="@+id/weatherIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:layout_constraintTop_toTopOf="@id/temperatureView"
-        app:layout_constraintBottom_toBottomOf="@id/temperatureView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/temperatureView"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/temperatureView"
+        app:layout_constraintTop_toBottomOf="@id/weatherIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="14sp"
