Main screen: added progress bar for current weather view

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -66,7 +66,8 @@
             app:description="@{viewModel.currentWeather.description}"
             app:temperatureFeelsLike='@{String.format("%s %d°C", @string/feels_like, viewModel.currentWeather.temperatureFeelsLike)}'
             app:windSpeed='@{String.format("%.1f%s", viewModel.currentWeather.windSpeed, @string/meters_per_second)}'
-            app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}' />
+            app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}'
+            app:progressVisibility="@{viewModel.isCurrentWeatherProgressVisible()}" />
 
         <ImageView
             android:id="@+id/settingsButton"
