--- a/app/src/main/res/layout/common_current_weather_view.xml
+++ b/app/src/main/res/layout/common_current_weather_view.xml
@@ -115,4 +115,16 @@
             android:textSize="12sp"
             tools:text="58%" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progressView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/app_blue"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
