--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -61,10 +61,10 @@
             app:layout_constraintBottom_toBottomOf="@id/calendarView"
             app:layout_constraintStart_toEndOf="@id/calendarView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:temperature='@{String.format("%d°C", viewModel.currentWeather.temperature)}'
+            app:temperature='@{String.format("%s°C", viewModel.currentWeather.temperatureString)}'
             app:weatherIconUrl="@{viewModel.currentWeather.iconUrl}"
             app:description="@{viewModel.currentWeather.description}"
-            app:temperatureFeelsLike='@{String.format("%s %d°C", @string/feels_like, viewModel.currentWeather.temperatureFeelsLike)}'
+            app:temperatureFeelsLike='@{String.format("%s %s°C", @string/feels_like, viewModel.currentWeather.temperatureFeelsLikeString)}'
             app:windSpeed='@{String.format("%.1f%s", viewModel.currentWeather.windSpeed, @string/meters_per_second)}'
             app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}'
             app:progressVisibility="@{viewModel.isCurrentWeatherProgressVisible()}" />
