--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
         <variable
             name="viewModel"
             type="com.example.lifediary.ui.location.selection.LocationSelectionViewModel" />
@@ -70,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="56dp"
             android:indeterminateTint="@color/app_green"
-            android:visibility="@{viewModel.isProgressVisible() ? View.VISIBLE : View.GONE}" />
+            app:booleanVisibility="@{viewModel.isProgressVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
