--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -13,76 +13,42 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
-        <TextView
-            android:id="@+id/title"
-            style="@style/Text.ScreenTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/calendarIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/icon_calendar_logo" />
+
+        <TextView
+            android:id="@+id/title"
+            style="@style/Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/calendarIcon"
+            app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
+            app:layout_constraintStart_toEndOf="@id/calendarIcon"
+            android:textColor="@color/app_green"
+            android:textSize="24sp"
             tools:text="16.08.2021"
             android:text="@{viewModel.title}" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/weatherForecastContainer"
+        <com.example.lifediary.ui.common.WeatherForecastView
+            android:id="@+id/weatherForecastView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:booleanVisibility="@{viewModel.isWeatherForecastContainerVisible()}">
-
-            <ImageView
-                android:id="@+id/dayIcon"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/icon_day_gray" />
-
-            <TextView
-                android:id="@+id/dayTemperatureView"
-                style="@style/Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/dayIcon"
-                app:layout_constraintBottom_toBottomOf="@id/dayIcon"
-                app:layout_constraintStart_toEndOf="@id/dayIcon"
-                android:layout_marginStart="2dp"
-                tools:text="+25°C"
-                android:text='@{String.format("%s°C", viewModel.dayTemperatureForDate)}' />
-
-            <ImageView
-                android:id="@+id/nightIcon"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                app:layout_constraintTop_toBottomOf="@id/dayIcon"
-                app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/icon_night_gray" />
-
-            <TextView
-                android:id="@+id/nightTemperatureView"
-                style="@style/Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/nightIcon"
-                app:layout_constraintBottom_toBottomOf="@id/nightIcon"
-                app:layout_constraintStart_toEndOf="@id/nightIcon"
-                android:layout_marginStart="2dp"
-                tools:text="+16°C"
-                android:text='@{String.format("%s°C", viewModel.nightTemperatureForDate)}' />
-
-            <ImageView
-                android:id="@+id/weatherIcon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                app:layout_constraintTop_toTopOf="@id/weatherForecastContainer"
-                app:layout_constraintBottom_toBottomOf="@id/weatherForecastContainer"
-                app:layout_constraintStart_toEndOf="@id/dayTemperatureView"
-                android:layout_marginStart="8dp"
-                tools:src="@drawable/icon_cloud_gray" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:booleanVisibility="@{viewModel.isWeatherForecastContainerVisible()}"
+            app:dayTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.dayString)}'
+            app:nightTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.nightString)}'
+            app:weatherIconUrl="@{viewModel.weatherForecastIconUrl}"
+            app:description="@{viewModel.weatherForecastDescription}"
+            app:windSpeed='@{String.format("%.1f%s", viewModel.weatherForecastForDate.windSpeed, @string/meters_per_second)}'
+            app:humidity='@{String.format("%d%s", viewModel.weatherForecastForDate.humidity, "%")}' />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
