--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -12,12 +12,14 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
-        <CalendarView
+        <com.kizitonwose.calendarview.CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            app:cv_dayViewResource="@layout/calendar_day_layout"
+            app:cv_orientation="horizontal"
+            app:cv_scrollMode="paged" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
