--- a/app/src/main/res/layout/calendar_month_layout.xml
+++ b/app/src/main/res/layout/calendar_month_layout.xml
@@ -4,14 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/monthText"
+    style="@style/Text.CalendarMonth"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    android:textAlignment="center"
-    android:textSize="16sp"
-    android:textColor="@color/app_green"
-    android:textStyle="bold"
     tools:text="October" />
