--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,6 +16,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Text.CalendarDay">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text.CalendarMonth">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/app_green</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
     <style name="ScreenContainer">
         <item name="android:padding">16dp</item>
     </style>
