--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -8,47 +8,114 @@
             type="com.example.lifediary.ui.calendar.CalendarDateViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/ScreenContainer">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/calendarIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/icon_calendar_logo" />
-
-        <TextView
-            android:id="@+id/title"
-            style="@style/Text"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/calendarIcon"
-            app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
-            app:layout_constraintStart_toEndOf="@id/calendarIcon"
-            android:textColor="@color/app_green"
-            android:textSize="24sp"
-            tools:text="16.08.2021"
-            android:text="@{viewModel.title}" />
+            style="@style/ScreenContainer"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-        <com.example.lifediary.ui.common.WeatherForecastView
-            android:id="@+id/weatherForecastView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:booleanVisibility="@{viewModel.isWeatherForecastContainerVisible()}"
-            app:dayTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.dayString)}'
-            app:nightTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.nightString)}'
-            app:weatherIconUrl="@{viewModel.weatherForecastIconUrl}"
-            app:description="@{viewModel.weatherForecastDescription}"
-            app:windSpeed='@{String.format("%.1f%s", viewModel.weatherForecastForDate.windSpeed, @string/meters_per_second)}'
-            app:humidity='@{String.format("%d%s", viewModel.weatherForecastForDate.humidity, "%")}' />
+            <ImageView
+                android:id="@+id/calendarIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:src="@drawable/icon_calendar_logo" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/title"
+                style="@style/Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/calendarIcon"
+                app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
+                app:layout_constraintStart_toEndOf="@id/calendarIcon"
+                android:textColor="@color/app_green"
+                android:textSize="24sp"
+                tools:text="16.08.2021"
+                android:text="@{viewModel.title}" />
+
+            <com.example.lifediary.ui.common.WeatherForecastView
+                android:id="@+id/weatherForecastView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:booleanVisibility="@{viewModel.isWeatherForecastContainerVisible()}"
+                app:dayTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.dayString)}'
+                app:nightTemperature='@{String.format("%s°C", viewModel.weatherForecastForDate.temperature.nightString)}'
+                app:weatherIconUrl="@{viewModel.weatherForecastIconUrl}"
+                app:description="@{viewModel.weatherForecastDescription}"
+                app:windSpeed='@{String.format("%.1f%s", viewModel.weatherForecastForDate.windSpeed, @string/meters_per_second)}'
+                app:humidity='@{String.format("%d%s", viewModel.weatherForecastForDate.humidity, "%")}' />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/addNoteContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="110dp"
+                app:booleanVisibility="@{viewModel.addNoteVisible}"
+                android:onClick="@{() -> viewModel.onAddNoteClick()}">
+
+                <ImageView
+                    android:id="@+id/addNoteButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:src="@drawable/icon_plus_green" />
+
+                <TextView
+                    android:id="@+id/addNoteTextView"
+                    style="@style/Text.MainControlsHint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@id/addNoteButton"
+                    app:layout_constraintTop_toTopOf="@id/addNoteButton"
+                    app:layout_constraintBottom_toBottomOf="@id/addNoteButton"
+                    android:text="@string/add_note" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/noteContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="110dp"
+                app:booleanVisibility="@{viewModel.noteVisible}">
+
+                <com.example.lifediary.ui.common.RollOutTextPanel
+                    android:id="@+id/noteView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/editNoteButton"
+                    android:layout_marginEnd="8dp"
+                    app:rolledUpMaxLines="@{viewModel.noteRolledUpMaxLines}"
+                    app:text="@{viewModel.noteText}" />
+
+                <ImageView
+                    android:id="@+id/editNoteButton"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:layout_constraintTop_toTopOf="@id/noteView"
+                    app:layout_constraintStart_toEndOf="@id/noteView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:src="@drawable/icon_edit_blue"
+                    android:onClick="@{() -> viewModel.onEditNoteClick()}" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
