Calendar date screen: realized adding notes

--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="@id/addNoteInputContainer"
             app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/icon_check_green"
-            android:onClick="@{() -> viewModel.onSaveClick()}" />
+            android:onClick="@{() -> viewModel.onSaveNotesClick()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
