Calendar date screen: realized editing notes

--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.lifediary.ui.notes.AddNotesViewModel" />
+            type="com.example.lifediary.ui.notes.AddEditNotesViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
