--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewModel"
@@ -21,7 +20,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/saveButton"
+            app:layout_constraintEnd_toStartOf="@id/buttonsContainer"
             android:padding="8dp"
             android:background="@drawable/background_substrate_light_gray">
             <EditText
@@ -34,14 +33,30 @@
                 android:hint="@string/write_a_note" />
         </ScrollView>
 
-        <ImageView
-            android:id="@+id/saveButton"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/buttonsContainer"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintTop_toTopOf="@id/addNoteInputContainer"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/icon_check_green"
-            android:onClick="@{() -> viewModel.onSaveNotesClick()}" />
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/addButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/icon_plus_green"
+                android:onClick="@{() -> viewModel.onSaveNotesClick()}"
+                app:booleanVisibility="@{viewModel.isAddButtonVisible}" />
+
+            <ImageView
+                android:id="@+id/saveButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/icon_check_green"
+                android:onClick="@{() -> viewModel.onSaveNotesClick()}"
+                app:booleanVisibility="@{viewModel.isSaveButtonVisible}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
