--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -38,15 +38,15 @@
 
         <EditText
             android:id="@+id/addShoppingListItemInput"
+            style="@style/Input"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/addShoppingListItemButton"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:inputType="text"
-            android:includeFontPadding="false"
             android:singleLine="true"
             android:maxLength="70"
             android:text="@={viewModel.newShoppingListItemText}"
