--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -46,4 +46,12 @@
         <item name="android:layout_height">42dp</item>
         <item name="android:indeterminate">true</item>
     </style>
+
+    <style name="Input">
+        <item name="android:padding">10dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:background">@drawable/background_substrate_light_gray</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_blue</item>
+        <item name="android:textColorHighlight">@color/app_light_blue</item>
+    </style>
 </resources>
